--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -61,6 +61,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    cursor: pointer;
 }
 .headersearchinput{
     border: none;
@@ -70,4 +71,42 @@
 .headersearchtext{
     color: rgb(68, 66, 66);
     cursor: pointer;
+}
+.date{
+    position: absolute;
+    top: 50px;
+}
+.options{
+    position: absolute;
+    top: 50px;
+    background-color:rgb(248, 245, 225);
+    color: rgb(133, 133, 49);
+    border-radius:5px;
+    -webkit-box-shadow:0px 0px 10px -5px rgba(0,0,0,0.6);
+    box-shadow:0px 0px 10px -5px rgb(0,0,0,0)
+
+}
+.optionitem{
+    width: 200px;
+    display:flex;
+    justify-content:space-between;
+    margin: 10px;
+}
+.optioncounter{
+    display:flex;
+    align-items:center;
+    gap: 10px;
+    font-size: 12px;
+    color:rgb(0, 0, 0)
+}
+.optioncounterbutton{
+    width:30px;
+    height: 30px;
+    border: 1px solid blue;
+    color: blue;
+    cursor: pointer;
+    background-color:whitesmoke;
+}
+.optioncounterbutton:disabled{
+    cursor: not-allowed;
 }
