--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -10,6 +10,11 @@
     max-width: 1024px; 
     margin:20px 0px 100px 0px;
 }
+
+.headercontainer.list{
+    margin:20px 0px 0px 0px;
+
+}
 .headerlist{
     display: flex;
     gap: 40px;
@@ -75,6 +80,7 @@
 .date{
     position: absolute;
     top: 50px;
+    z-index:2;
 }
 .options{
     position: absolute;
@@ -83,7 +89,8 @@
     color: rgb(133, 133, 49);
     border-radius:5px;
     -webkit-box-shadow:0px 0px 10px -5px rgba(0,0,0,0.6);
-    box-shadow:0px 0px 10px -5px rgb(0,0,0,0)
+    box-shadow:0px 0px 10px -5px rgb(0,0,0,0);
+    z-index:2;
 
 }
 .optionitem{
