--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -1,5 +1,5 @@
 .header{
-    background-color:rgb(34, 72, 154);
+    background-color: #003580;
     color:white;
     display: flex;
     justify-content:center;
