--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar{
     height:50px;
-    background-color: rgb(3, 3, 104);
+    background-color: #003580;
     display:flex;
     justify-content:center;
 
